# mcharts

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.md  CMakeLists.txt  Chart.js  Chart.qml  LICENSE-MiloCodeDB.txt  MChart.qml  MChartOptions.qml  MDataset.qml  README.md  mcharts.doxyfile  mcharts.pri  mcharts.qrc
doc/branding/: milo-doxy-header.html  milo-doxygen.css  milo-doxygen.scss  milo.js
example/: QmlCharts.pro  dataprovider.cpp  dataprovider.h  main.cpp  main.qml
example/utils/: qmlhelpers.cpp  tags.h
examples/live-update-example/: dataprovider.cpp  dataprovider.h  main.cpp  main.qml
examples/showcase-example/: dataprovider.cpp  dataprovider.h  main.cpp  main.qml  showcase-example.pro
examples/utils/: helpers.h  qmlhelpers.h
tst_mcharts/: tst_mcharts.cpp  tst_mcharts.pro
